--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Deploy  Stacks
+name: Deploy_Stacks
 
 on:
   workflow_dispatch:
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with: 
@@ -16,13 +17,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: us-east-1
+
       - name: List Files
         run: ls -R
         working-directory: ${{ github.workspace }}
-      - name:another stack
-        run: | 
+
+      - name: Deploy Stack riti123
+        run: |
           aws cloudformation deploy \
-          --stack-name ritustACK \
-          --template-file 404AZStack.yaml \
-          --capabilities CAPABILITY_NAMED_IAM \
-          
+            --stack-name riti123 \
+            --template-file 404AZStack.yaml \
+            --capabilities CAPABILITY_NAMED_IAM
